# aula18_bootcamp

./: README.md  pyproject.toml
src/: controller.py  pokemon.db
