[tool.poetry]
name = "aula18-bootcamp"
version = "0.1.0"
description = ""
authors = ["Wagner Cavalcante <wagnerc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
